--- a/grade/report/forecast/styles.css
+++ b/grade/report/forecast/styles.css
@@ -67,3 +67,7 @@
 .dir-rtl.path-grade-report-forecast .user-grade .column-itemname.baggb {
     padding-right: 24px;
 }
+
+.path-grade-report-forecast .modal {
+    display: none;
+}
